Added fixtures, added /brp/kvk call
